# commit-bridge

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  clippy.toml  deny.toml  docker-compose.yaml.example  flake.nix
.sqlx/: query-090de72845fe6d5a026cb2d1674b19a3b633f4d1de51543ff030023c19e03500.json  query-0b4e1596515ebf1efe9b7dfdfe56a8aa4206150cb0568ca749c8e3f55dc82cdf.json  query-154da816a290ec5334eadf9ecb57cabf81fcdb299e79339713f77ff0b36f279d.json  query-23f36cd5e923c672f58a59f166a38705b6baa4a260eeba17cf496dd952bd6d35.json  query-2576c280a055589db37b7bf1fefd92f6c8277cdb36d924f8f38b82f982da4c9a.json  query-30b46e820bb013286bf5a18db3513ac49077fb81e012c1d3172bcb24941835bb.json  query-31faf9cdb705cbedde4f1f7df4ffaf8f3056601885fb8bbfa0e3def3e8c49860.json  query-3a8a5b3e9effb629fa7d87276ac0fb60a4f034eb72b09e02cb1da9422ffee6cc.json  query-6ac27dc735299b2790c77cbf4006a491bc69e49f2a18ce11af48ed61edac2677.json  query-6c210a58201d85008d4b9cfb4f12f993745ff1e05ba21ab9b5cf6935e28a36b3.json  query-6d48a02ed6f3f0605a87d2e52a23283b7fe3088ac5a0fe0536dafbf2794ba70b.json  query-743fdf038fa2207542524d54ed1510fb91f9ed876ba7c5a8b616ac92881dcd4d.json  query-7b571f57d710181bae06b445f1937862e930073560a78f8e10ca5be56e7a8e01.json  query-80287ebc9a822c3ee7065dca68542b91f24a8345f4e1db28cf060d38e861e299.json  query-82835b7ced5e6ab609397ff873b97b60ae8aa8d36135501c27ca0e2c3f756d8c.json  query-856bf3ec764f679c948c23b5e61d20b6ab549ccf15761207d7c09079f3ef0e31.json  query-8fd1e14a687da7642c1505001190a13b2e71555d51113601377cba0164a95623.json  query-909f9f4e535aec8c866b92c1cce33f2c2114ba5d446b734e2fa7bbf7e91d1307.json  query-a004881cdba32775742ab5f2d09f415aa142286d871e80d7a70e719fdd3e762f.json  query-a4cc7fa33f7fd3614e76c254a0c9a304ae106bcd891c3ecba9b338fd53ba0f6d.json  query-aa254117acef2e2e976b1d11a76bc763336435ad3ffe04da4623a4a9510c1ac1.json  query-ab0fbe9f6048b923d3116caf89d662083976fab8327757ac69eefb64ff6fca0d.json  query-adb4f4dfab995b1f06e7491b3cbf5d8d426e63e6eee4b721b46c8b54b9c682e8.json  query-c515c7d432d01eb9bcca49d1f74bba800cf0a8ee5173a00e25d25d48adf78929.json  query-d14e60e64ebcb4937fddb7228fc2371d8e8fa0be12536e9bb78470d381bb13bb.json  query-d53208f9ef3b49471aba43ebfa0592033ad832148e7b48cbc7f94dfaa18672bf.json  query-f92f2a81ed3beb2689f99e9a3a389d56f74c75d0454e797e41895dcca4a22f18.json
examples/: timing_attack_check.rs
http/: requests.http
migrations/: 20260611141508_add_unique_index_to_branches.sql  20260616085611_update_trigger_queue_coalescing.sql  20260625073816_rename_subscribers_to_subscriptions.sql  20260701120612_fix_trigger_coalescing.sql
src/: config.rs  (+9 more)
(+31 files in other folders)
