[package]
name = "relay"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
async-trait = "0.1"
axum = { version = "0.8.9", features = ["macros"] }
chrono = { version = "0.4.45", features = ["serde"] }
config = "0.15.25"
dotenvy = "0.15.7"
futures = "0.3.32"
http = "1.4.2"
humantime-serde = "1.1.1"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
reqwest = { version = "0.13.4", features = ["json"] }
rovo = { version = "0.4.8", features = ["scalar"] }
schemars = { version = "0.9", features = ["chrono04"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono" ] }
subtle = "2.6.1"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["process", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6", features = ["timeout"] }
tracing = "0.1.44"
tracing-subscriber = "0.3"
url = { version = "2.5.8", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
dudect-bencher = "0.7.0"
rand = "0.10.1"
tokio-test = "0.4"
wiremock = "0.6"

[profile.release]
lto = true
codegen-units = 1
